...
  "26i6oymb99f": ["Conan's Wheel"],
  "26lw8t8alq2": ["Cable Pull Through"],
  "26rkywvyj3c": ["Glute Bridge","Single Leg Glute Bridge"],
  "26ty06yt8hs": ["Wide Stance Barbell Squat"],
  "26xoyjz85lx": ["Power Snatch from Blocks"],
  "26yz5yrzp7i": ["Wall Ball"],
  "270rikzfny8": ["Back Squat"],
  "2710sofrvzk": ["Smith Machine Close-Grip Bench Press"],
  "27f94ldawgk": ["Kettlebell Snatch"],
  "27gf3gde1vl": ["Single Arm Triceps Pushdown","Cable One Arm Triceps Extension"],
  "27y4w6jnapl": ["Smith Machine Behind the Back Shrug"],
  "285a60deepv": ["Extended Range One-Arm Kettlebell Floor Press","One-Arm Kettlebell Floor Press"],
  "28c6t6kf8tu": ["Goblet Squat"],
...
